[package]
name = "pd"
version = "0.1.0"
authors = ["Navin Karkera <navin@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
clap = "2.33"
dialoguer = "0.4.0"
zbox = { version = "0.8.5", features = ["libsodium-bundled", "storage-file"] }
tar = "0.4"
flate2 = "1.0"
